FOOTER FAIT manque CLIENT TESTI et OUR BLOG

--- a/index.html
+++ b/index.html
@@ -748,17 +748,18 @@
             </div>
             <div class="card cardContact text-white d-flex justify-content-center align-items-center ">
                 <div class="card-body  text-center">
-                    <div>
-                    <i class="fas fa-map-marker-alt"></i>
-                  <p class="card-title border-bottom">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis facere itaque tenetur.</p> </div>
+                    <div class="pt-5">
+                    <i class="fa-3x fas fa-map-marker-alt"></i>
+                  <p class="card-title border-bottom">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis facere itaque tenetur.</p> 
+                    </div>
     
-                <div>
-                  <i class="fas fa-phone-alt"></i>
+                <div class="pt-4">
+                  <i class="fa-3x fas fa-phone-alt"></i>
                   <p class="card-text border-bottom">+91_9876543210</p>
                 </div>
-                  <div>
-                  <i class="fas fa-envelope"></i>
-                  <p class="card-text border-bottom">+91_9876543210</p>
+                  <div class="pt-4 pb-4">
+                  <i class="fa-3x fas fa-envelope"></i>
+                  <p class="card-text ">abc@abc.com</p>
                 </div>
                 </div>
               </div>
@@ -768,7 +769,94 @@
 
 
 
+<footer>
 
+   <section class="bgFooter ">
+    <div class="container  ">
+        <div class="row m-auto  ">
+            <!------------ about us -------->
+            <div class="col-4 mt-5 text-white">
+                <h3 class="mb-5">About US</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam, explicabo rerum exercitationem enim eligendi autem blanditiis. Nulla iure neque minima, ex doloremque doloribus fuga.....</p>
+
+            </div>
+            <!---------- instagram ------->
+            <div class="col-4 mt-5">
+                <h3 class="text-white mb-5">INSTAGRAM</h3>
+                <!-- img insta -->
+                <div class="row">
+                    <div class="col-3">
+                        <div class="mb-3 ms-3">
+                            <img src="./img/instragram_gallery_img1.jpg" alt="">
+                        </div>
+                        <div class="ms-3">
+
+                            <img src="./img/instragram_gallery_img2.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="mb-3 ">
+                            <img src="./img/instragram_gallery_img2.jpg" alt="">
+                        </div>
+                        <div class="">
+
+                            <img src="./img/instragram_gallery_img1.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-3 ">
+                        <div class="mb-3 ">
+                            <img src="./img/instragram_gallery_img1.jpg" alt="">    
+                        </div>
+                        <img src="./img/instragram_gallery_img2.jpg" alt="">
+                    </div>
+                    <div class="col-3 ">
+                        <div class="mb-3 ">
+                            <img src="./img/instragram_gallery_img2.jpg" alt="">
+                        </div>
+                        <img src="./img/instragram_gallery_img1.jpg" alt="">    
+                    </div>
+                </div>
+            </div>
+            <!-------- popular Tags ---------->
+            <div class="col-4 mt-5">
+                <h3 class="text-white mb-5">POPULAR TAGS</h3>
+                <div class="row m-auto">
+                <div class="col-4">
+                    <span class="rounded-pill text-white">restaurant</span>
+                    <span class="rounded-pill text-white">Blog Section</span>
+                    <span class="rounded-pill text-white">Graphic</span>
+                </div>
+                <div class="col-4">
+                    <span class="rounded-pill text-white">Responsive Design</span>
+                    <span class="rounded-pill text-white">SEO</span>
+                    <span class="rounded-pill text-white">Food</span>
+
+                </div>
+                <div class="col-4">
+                    <span class="rounded-pill text-white">Hotel</span>
+                    <span class="rounded-pill text-white">Cuisine</span>
+                </div>
+            </div>
+            </div>
+
+        </div>
+    </div>
+
+   </section> 
+<section class="lebgrouge">
+    <div class="text-center">
+    <p> Mahad Liban <br>
+    Coding School <br>
+    &copy; 2O2O <br>
+     Lééé Sang</p>
+    </div>
+</section>
+
+
+</footer>
+
+<div class="footerDeco">
+</div>
 
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- JavaScript Bundle with Popper -->
