--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     <a class="nav-link text-white" href="#">TEAM</a>
                 </li>
             </ul>
-            <img src="./public/img/logo.png" alt="">
+            <img src="./img/logo.png" alt="">
             <ul class="nav">
                 <li class="nav-item">
                     <a class="nav-link text-white" href="#">RESERVATION</a>
