--- a/index.html
+++ b/index.html
@@ -680,6 +680,12 @@
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam, explicabo rerum
                                     exercitationem enim eligendi autem blanditiis. Nulla iure neque minima, ex
                                     doloremque doloribus fuga.....</p>
+                                    <div>
+                                        <i class="fab fa-facebook-f fa-2x me-1"></i>
+                                        <i class="fab fa-google-plus-g fa-2x me-1"></i>
+                                        <i class="fab fa-pinterest-p fa-2x me-1 "></i>
+                                        <i class="fab fa-invision fa-2x me-1"></i>
+                                    </div>
 
                             </div>
                             <!---------- instagram ------->
