--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                                     <p class="Itext">Breakfast</p>
                                 </div>
                                 <!-- Colonne 1 -->
-                                <div class="col-5 lesCafé d-flex">
+                                <div class="col-5 lesCafé d-flex border-bottom">
                                     <div class="row ">
                                         <div class="col-3">
                                             <img class="rounded-circle" src="./img/menu_image_1.jpg" alt="coffe">
@@ -161,7 +161,7 @@
                                     </div>
                                 </div>
                                 <!-- Colonne 2 -->
-                                <div class="col-5 lesCafé d-flex">
+                                <div class="col-5 lesCafé d-flex ">
                                     <div class="row ">
                                         <div class="col-3">
                                             <img class="rounded-circle" src="./img/menu_image_1.jpg" alt="coffe">
@@ -669,9 +669,10 @@
 <!-- debut footer -->
 
             <footer>
-<div class="footerDeco w-100">
-</div>
+
                 <section class="bgFooter ">
+                    <div class="footerDeco ">
+                    </div>
                     <div class="container  ">
                         <div class="row m-auto  ">
                             <!------------ about us -------->
@@ -761,8 +762,8 @@
                                     <div class="col-2"></div>
                                 </div>
                                 <div class="row text-center">
-                                    <div class="col-2 pe-3 ps-3 rounded-pill me-3">Graphic</div>
-                                    <div class="col-2 rounded-pill">Food</div>
+                                    <div class="col-2  p-2 rounded-pill me-3">Graphic</div>
+                                    <div class="col-2 rounded-pill p-2">Food</div>
                                     <div class="col-4 "></div>
                                 </div>
 
